Adds auto updater process monitoring using God and rake tasks to pull shuttle tracking data feed

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 
 # Ignore external Polymer components
 /vendor/assets/components/*
+
+# Ignore vehicle tracking initializer
+/config/initializers/vehicle_tracking.rb
