--- a/conf.json.sample
+++ b/conf.json.sample
@@ -1,7 +1,20 @@
 {
-  "DataFeed": "",
-  "UpdateInterval": 15,
-  "MongoURL": "localhost",
-  "MongoPort": "27017"
-  "Authenticate": false;
+  "Updater": {
+    "DataFeed": "",
+    "UpdateInterval": "3s"
+  },
+  "API": {
+    "GoogleMapAPIKey": "",
+    "GoogleMapMinDistance": 1,
+    "CasURL": "https://cas-auth.rpi.edu/cas/",
+    "Authenticate": true
+  },
+  "Database": {
+  },
+  "Log": {
+    "Level": "debug"
+  },
+  "Server": {
+    "ListenURL": "localhost:8080"
+  }
 }
