--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - govendor sync
 
 script:
-  - go test -race -coverprofile=coverage.txt -covermode=atomic $(go list ./... | grep -v /vendor/)
+  - bash ./test.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
