--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - govendor sync
 
 script:
-  - bash ./test.sh
+  - ./test.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
