--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "google-map": "GoogleWebComponents/google-map#^1.0.0",
     "iron-elements": "PolymerElements/iron-elements#~1.0.3",
     "paper-elements": "PolymerElements/paper-elements#~1.0.5",
-    "polymer": "Polymer/polymer#^1.1.0"
+    "polymer": "Polymer/polymer#^1.1.0",
+    "leaflet": "^1.2.0",
+    "leaflet-rotatedmarker": "^0.2.0"
   }
 }
