Fix sample conf database URL

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -11,6 +11,7 @@
     "ListenURL": "127.0.0.1:8080"
   },
   "Database": {
+    "MongoURL": "127.0.0.1:27017"
   },
   "Log": {
     "Level": "debug"
