Shuttle route indicator (#84)
* Change color of shuttle icon based on what route it's probably on
* Make user location icon orange
* Readme and sample configuration changes
* Improve updater logging and error handling

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -7,14 +7,13 @@
     "GoogleMapAPIKey": "",
     "GoogleMapMinDistance": 1,
     "CasURL": "https://cas-auth.rpi.edu/cas/",
-    "Authenticate": true
+    "Authenticate": true,
+    "ListenURL": "127.0.0.1:8080"
   },
   "Database": {
+    "MongoURL": "127.0.0.1:27017"
   },
   "Log": {
     "Level": "debug"
-  },
-  "Server": {
-    "ListenURL": "localhost:8080"
   }
 }
