--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 language: go
 
 go:
-  - 1.8.x
+  - "1.7.x"
+  - "1.8.x"
+  - "1.9.x"
+  - "1.10.x"
   - tip
 
+matrix:
+  allow_failures:
+    - go: tip
+
 before_install:
-  - go get -u github.com/kardianos/govendor
-  - govendor sync
+  - go get -u github.com/kardianos/govendor && govendor sync
+  - go get -u github.com/alecthomas/gometalinter && gometalinter --install
 
 script:
+  - gometalinter --vendor ./... || true
   - ./test.sh
 
 after_success:
