--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ script:
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
-cache:
-  directories:
-    - $GOPATH/src
-    - $GOPATH/pkg
+# cache:
+#   directories:
+#     - $GOPATH/src
+#     - $GOPATH/pkg
 
 notifications:
   email: false
