--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,13 @@ matrix:
   allow_failures:
     - go: tip
 
-install:
+before_install:
   - go get -u github.com/kardianos/govendor && govendor sync
   - go get -u github.com/alecthomas/gometalinter && gometalinter --install
   - go get -u github.com/bradleyfalzon/revgrep/...
+
+install:
+  - go install
 
 script:
   - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then gometalinter --vendor ./... 2>&1 | revgrep origin/master; fi
