--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ go:
   - 1.8.x
   - 1.9.x
   - 1.10.x
-  - tip
+  - master
 
 matrix:
   allow_failures:
-    - go: tip
+    - go: master
+  fast_finish: true
 
 before_install:
-  - go get -u github.com/kardianos/govendor && govendor sync
+  - go get -u github.com/kardianos/govendor && govendor sync -v
   - go get -u github.com/alecthomas/gometalinter && gometalinter --install
   - go get -u github.com/bradleyfalzon/revgrep/...
 
