Switch base Docker image and ignore everything by default

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,15 @@
-.git
-.idea
-example_database
-conf.json
-conf.json.sample
+*
+!api
+!auth
+!cmd
+!config
+!database
+!log
+!model
+!static
+!updater
+!vendor/vendor.json
+!admin.html
+!main.go
+!index.html
+!CHECKS
