--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@types/leaflet": "^1.2.10",
+    "leaflet": "^1.3.4",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
   },
