Refactor everything into services and move to Postgres (#152)
* temp

* Move main package to subpackage

* Update Dockerfile with new main package path

* Begin refactoring

* Update pq

* Begin testing vehicle service

* Start reworking vehicles test

* Test content-type

* Test no vehicles response

* Add test for returned vehicles

* Add test for creating vehicle

* Add test for vehicle modification

* Actually test modification

* Switch vehicles routes away from chi URL parameters; test vehicle delete

* Verbose govendor output and fast finish

* Fix pq vendoring

* Remove useless handler

* Continue implementing vehicles in postgres

* Update comment

* Flesh out postgres vehicle service implementation

* Begin refactoring route and time

* yikes

* Add itrak time/date parsing test

* Fix tests

* Refactor AdminMessage into MessageService

* Create UserService

* Fix tests

* Add StopService

* Remove database package

* Update gitignore

* Implement postgres UserService queries

* Get latest locations and create locations

* Flesh out postgres location service

* Remove model and mongo packages

* Fix some linter issues

* Fix route guessing returning empty route instead of nil

* Read route points from database

* Flesh out route service

* Stop creating unused table

* Fix path regex to account for floating point

* Route creation and display

* Fix route guessing

* Fix updater iTRAK time parsing

* Flesh out message service

* Stops (not deletion)

* Preliminary stop ordering

* Order stops properly

* Delete stop ordering on route deletion

* Insert stop order with route

* Modify route can change stop ordering

* Stop using sort.Slice

* Stop deletion

* Fix some linter issues

* Rip out route scheduling stuff

* Read database connection info from environment/config file

* Update documentation

* Fix authenticate option

* Change IDs from i

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,13 +3,14 @@
 !auth
 !cmd
 !config
-!database
 !log
-!model
+!mock
+!postgres
 !static
+!time
 !updater
 !vendor/vendor.json
 !admin.html
-!main.go
+!*.go
 !index.html
 !CHECKS
