--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/leaflet": "^1.2.10",
     "leaflet": "^1.3.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
