build and copy files

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_install:
   - go get -u github.com/kardianos/govendor && govendor sync -v
   - go get -u github.com/alecthomas/gometalinter && gometalinter --install
   - go get -u github.com/bradleyfalzon/revgrep/...
-  - cd frontend && npm install
+  - cd frontend && npm install && npm run build && cd ..
+  - cp -R ./frontend/build/* ./static/
 
 install:
   - go install github.com/wtg/shuttletracker/cmd/shuttletracker
