remove trailing comma

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -7,7 +7,7 @@
     "CasURL": "https://cas-auth.rpi.edu/cas/",
     "Authenticate": true,
     "ListenURL": "127.0.0.1:8080",
-    "MapboxAPIKey": "",
+    "MapboxAPIKey": ""
   },
   "Postgres": {
     "URL": "postgres://localhost/shuttletracker?sslmode=disable"
