--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
   - go get -u github.com/kardianos/govendor && govendor sync -v
   - go get -u github.com/alecthomas/gometalinter && gometalinter --install
   - go get -u github.com/bradleyfalzon/revgrep/...
+  - cd frontend && npm install && npm run build && cd ..
 
 install:
   - go install github.com/wtg/shuttletracker/cmd/shuttletracker
