Have Travis remove dotfiles before cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,5 @@ cache:
     - $GOPATH/pkg
 
 before_cache:
-  - rm -rf $GOPATH/src/github.com/wtg/shuttletracker/*
+  - rm -rf $GOPATH/src/github.com/wtg/shuttletracker/{*,.*}
   - rm -rf $GOPATH/pkg/**/github.com/wtg/shuttletracker/*
