--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.2.10",
+    "bulma": "^0.7.2",
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "vue": "^2.5.17",
