--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.2.10",
+    "@types/leaflet-routing-machine": "^3.2.1",
     "bulma": "^0.7.2",
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet-routing-machine": "^3.2.12",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
