--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/leaflet": "^1.2.10",
     "@types/leaflet-routing-machine": "^3.2.1",
     "bulma": "^0.7.2",
+    "@types/leaflet-rotatedmarker": "^0.2.1",
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-routing-machine": "^3.2.12",
