Change filter from indexOf to Match

--- a/static/json/east_category.json
+++ b/static/json/east_category.json
@@ -66,94 +66,94 @@
 			"name":"Time",
 			"items":[
 			{
-				"name":"7:00",
-				"value":"7:",
+				"name":"7:00a",
+				"value":"7:..a",
 				"active": false
 			},
 			{
-				"name":"8:00",
-				"value":"8:",
+				"name":"8:00a",
+				"value":"8:..a",
 				"active": false
 			},
 			{
-				"name":"9:00",
-				"value":"9:",
+				"name":"9:00a",
+				"value":"9:..a",
 				"active": false
 			},
 			{
-				"name":"10:00",
-				"value":"10:",
+				"name":"10:00a",
+				"value":"10:..a",
 				"active": false
 			},
 			{
-				"name":"11:00",
-				"value":"11:",
-				"active": false
-			
-			},
-			{
-				"name":"12:00",
-				"value":"12:",
+				"name":"11:00a",
+				"value":"11:..a",
 				"active": false
 			
 			},
 			{
-				"name":"13:00",
-				"value":"13:",
+				"name":"12:00p",
+				"value":"12:..p",
 				"active": false
 			
 			},
 			{
-				"name":"14:00",
-				"value":"14:",
+				"name":"1:00p",
+				"value":"1:..p",
 				"active": false
 			
 			},
 			{
-				"name":"15:00",
-				"value":"15:",
+				"name":"2:00p",
+				"value":"2..p",
 				"active": false
 			
 			},
 			{
-				"name":"16:00",
-				"value":"16:",
+				"name":"3:00p",
+				"value":"3:..p",
 				"active": false
 			
 			},
 			{
-				"name":"17:00",
-				"value":"17:",
+				"name":"4:00p",
+				"value":"4:..p",
 				"active": false
 			
 			},
 			{
-				"name":"18:00",
-				"value":"18:",
+				"name":"5:00p",
+				"value":"5:..p",
 				"active": false
 			
 			},
 			{
-				"name":"19:00",
-				"value":"19:",
+				"name":"6:00p",
+				"value":"6:..p",
 				"active": false
 			
 			},
 			{
-				"name":"20:00",
-				"value":"20:",
+				"name":"7:00p",
+				"value":"7:..p",
 				"active": false
 			
 			},
 			{
-				"name":"21:00",
-				"value":"21:",
+				"name":"8:00p",
+				"value":"8:..p",
 				"active": false
 			
 			},
 			{
-				"name":"22:00",
-				"value":"22:",
+				"name":"9:00p",
+				"value":"9:..p",
+				"active": false
+			
+			},
+			{
+				"name":"10:00p",
+				"value":"10:..p",
 				"active": false
 			
 			}
