Turn Shuttle Tracker into a Go module (#198)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: go
 
 go:
-  - 1.7.x
-  - 1.8.x
-  - 1.9.x
-  - 1.10.x
   - 1.11.x
   - master
 
@@ -13,6 +9,9 @@ matrix:
     - go: master
   fast_finish: true
 
+env:
+  - GO111MODULE=on
+
 services:
   - docker
 
@@ -20,9 +19,8 @@ addons:
   postgresql: "9.6"
 
 before_install:
-  - go get -u github.com/kardianos/govendor && govendor sync -v
-  - if [ "go version go1.8.7 linux/amd64" != "$(go version)" ] && [ "go version go1.7.6 linux/amd64" != "$(go version)" ]; then go get -u github.com/alecthomas/gometalinter && gometalinter --install; fi
-  - go get -u github.com/bradleyfalzon/revgrep/...
+  - curl -L https://git.io/vp6lP | sh
+  - GO111MODULE=off go get -u github.com/bradleyfalzon/revgrep/...
   - cd frontend && npm install && npm run build && cd ..
 
 install:
@@ -32,8 +30,8 @@ before_script:
   - psql -c 'create database shuttletracker_test;' -U postgres
 
 script:
-  - if [ "$TRAVIS_PULL_REQUEST" != "false" ] && [ "go version go1.8.7 linux/amd64" != "$(go version)" ] && [ "go version go1.7.6 linux/amd64" != "$(go version)" ]; then gometalinter --vendor ./... 2>&1 | revgrep origin/master; fi
-  - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "go version go1.8.7 linux/amd64" != "$(go version)" ] && [ "go version go1.7.6 linux/amd64" != "$(go version)" ]; then gometalinter --vendor ./... || true; fi
+  - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then go mod vendor && GO111MODULE=off PATH="$(pwd)/bin:$PATH" ./bin/gometalinter --vendor ./... 2>&1 | revgrep origin/master; fi
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then go mod vendor && GO111MODULE=off PATH="$(pwd)/bin:$PATH" ./bin/gometalinter --vendor ./... || true; fi
   - ./test.sh
   - docker build .
   - bash <(curl -s https://codecov.io/bash)
