--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/leaflet": "^1.2.10",
     "@types/leaflet-rotatedmarker": "^0.2.1",
     "@types/leaflet-routing-machine": "^3.2.1",
     "ajv": "^6.5.4",
+    "buefy": "^0.7.2",
     "bulma": "^0.7.2",
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
