--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ before_script:
   - psql -c 'create database shuttletracker_test;' -U postgres
 
 script:
-  - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then go mod vendor && GO111MODULE=off PATH="$(pwd)/bin:$PATH" ./bin/gometalinter --vendor ./... 2>&1 | revgrep origin/master; fi
-  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then go mod vendor && GO111MODULE=off PATH="$(pwd)/bin:$PATH" ./bin/gometalinter --vendor ./... || true; fi
-  - ./lint.sh
+  - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then ./bin/golangci-lint run --new-from-rev=HEAD~ ./...; fi
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then ./bin/golangci-lint run ./... || true; fi
+  - cd frontend && npx tslint --project . && cd ..
   - ./test.sh
   - docker build .
   - bash <(curl -s https://codecov.io/bash)
