--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,12 +6,14 @@
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
+    "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
       "node",
+      "webpack-env",
       "mocha",
       "chai"
     ],
