--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/leaflet": "^1.2.10",
     "@types/leaflet-rotatedmarker": "^0.2.1",
     "@types/leaflet-routing-machine": "^3.2.1",
+    "@types/webpack-env": "^1.13.9",
     "ajv": "^6.5.4",
     "buefy": "^0.7.2",
     "bulma": "^0.7.2",
@@ -35,11 +36,10 @@
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.0",
     "@vue/cli-plugin-typescript": "^3.0.0",
     "@vue/cli-plugin-unit-mocha": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
+    "@vue/cli-service": "^3.5.3",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-loader": "^8.0.4",
     "chai": "^4.1.2",
-    "copy-webpack-plugin": "^4.5.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
