--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
 
 before_install:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
+  - npm i -g npm@6.9.0
   - cd frontend && npm ci && npm run build && cd ..
 
 install:
