--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-routing-machine": "^3.2.12",
+    "tabulator-tables": "^4.2.5",
     "typeface-open-sans": "0.0.54",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.4",
