--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ addons:
 
 before_install:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
-  - cd frontend && npm install && npm run build && cd ..
+  - npm i -g npm@6.9.0
+  - cd frontend && npm ci && npm run build && cd ..
 
 install:
   - go install github.com/wtg/shuttletracker/cmd/shuttletracker
