--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web-push": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
