--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@types/leaflet-routing-machine": "^3.2.1",
     "@types/webpack-env": "^1.13.9",
     "ajv": "^6.5.4",
+    "axios": "^0.19.0",
     "buefy": "^0.7.2",
     "bulma": "^0.7.2",
+    "http": "0.0.0",
     "leaflet": "^1.3.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-routing-machine": "^3.2.12",
