Allow smooth tracking and update spoofing options to be read properly from config and disable smooth tracking by default in config

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -15,10 +15,10 @@
     "Level": "debug"
   },
   "Smooth": {
-    "PredictionInterval": "1s",
-    "PredictUpdates": true
+    "PredictUpdates": false,
+    "PredictionInterval": "1s"
   },
-  "Spoofer": {
+  "Spoof": {
     "SpoofUpdates": false,
     "SpoofInterval": "10s"
   }
