Add smooth tracking options to sample config

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -13,5 +13,9 @@
   },
   "Log": {
     "Level": "debug"
-  }
+  },
+  "Smooth": {
+    "PredictUpdates": false,
+    "PredictionInterval": "1s"
+  },
 }
