--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "buefy": "^0.7.2",
     "bulma": "^0.8.0",
     "leaflet": "^1.3.4",
+    "leaflet.marker.slideto": "^0.2.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-routing-machine": "^3.2.12",
     "suncalc": "^1.8.0",
@@ -44,7 +45,7 @@
     "chai": "^4.1.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
+    "typescript": "3.0.3",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.43.0"
   }
