Captilized the first letter of functions so that they can be exported

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -19,7 +19,7 @@
     "SpoofInterval": "10s"
   },
   "Smooth": {
-    "PredictUpdates": false,
+    "PredictUpdates": true,
     "PredictionInterval": "1s"
   }
 }
