--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/leaflet-routing-machine": "^3.2.1",
     "@types/webpack-env": "^1.13.9",
     "ajv": "^6.5.4",
+    "axios": "^0.20.0",
     "buefy": "^0.7.2",
     "bulma": "^0.8.0",
     "leaflet": "^1.3.4",
