Add smooth tracking debug mode to config options

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -20,6 +20,7 @@
   },
   "Smooth": {
     "PredictUpdates": false,
-    "PredictionInterval": "1s"
+    "PredictionInterval": "1s",
+    "DebugMode": false
   }
 }
