--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "chai": "^4.1.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.0.1",
-    "typescript": "3.0.3",
+    "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.43.0"
   }
